--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - mongo
     volumes:
       - api-build:/opt/application/api-build
-      - api-storage:/data/storage
+      - /data/tickets-storage:/data/storage
     env_file: api/production.env
     healthcheck:
       test: curl -s -w '%{http_code}' http://localhost:3000/api/describe
