--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
   },
   "aeriaSdk": {
     "publicUrl": {
-      "development": "http://localhost:3000/api"
+      "development": "http://localhost:3000/api",
+      "production": "https://suporte.capsulbrasil.com.br/api"
     },
     "storage": {
       "strategy": "localStorage",
