--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,25 @@ services:
       timeout: 5s
       interval: 10s
 
+  web:
+    build:
+      context: web
+    depends_on:
+      api:
+        condition: service_healthy
+    volumes:
+      - api-build:/opt/application/api
+      - web-build:/var/www/html
+
   nginx:
     build:
       context: nginx
     restart: always
     depends_on:
-      - api
+      - web
     ports:
       - 8280:80
     volumes:
-      - api-build:/opt/application/api
       - web-build:/var/www/html
 
 volumes:
