--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "@aeriajs/cli/config/tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
-        "preserveSymlinks": true
+        "preserveSymlinks": true,
+        "module": "CommonJS",
+        "moduleResolution": "node10"
     },
     "include": [
         "@types/*.d.ts",
