--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,25 @@
     "build:ci": "vue-tsc --noEmit && aeria-ui -m build",
     "build": "aeria-ui -m build"
   },
+  "aeriaSdk": {
+    "publicUrl": {
+      "development": "http://localhost:3000/api",
+      "production": "https://suporte.capsulbrasil.com.br/api"
+    },
+    "storage": {
+      "strategy": "localStorage",
+      "namespace": "aeria"
+    },
+    "mirrorPaths": [
+      ".aeria"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aeria-ui/i18n-en": "^0.0.3",
+    "@aeria-ui/i18n-pt": "^0.0.3",
     "aeria-app-layout": "^0.0.42",
     "aeria-ui": "^0.0.110"
   },
