--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@aeria-ui/i18n-pt": "^0.0.3",
     "@eslint/config-array": "^0.18.0",
     "@eslint/object-schema": "^2.1.4",
+    "discord.js": "^14.16.3",
     "glob": "^11.0.0",
     "rimraf": "^6.0.1"
   }
