--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@eslint/object-schema": "^2.1.4",
     "discord.js": "^14.16.3",
     "glob": "^11.0.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tailwind-scrollbar": "^3.1.0"
   }
 }
