--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@eslint/object-schema": "^2.1.4",
     "discord.js": "^14.16.3",
     "glob": "^11.0.0",
+    "node-fetch": "^2.7.0",
+    "qrcode": "^1.5.4",
     "rimraf": "^6.0.1",
     "tailwind-scrollbar": "^3.1.0"
   }
